// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge bg blue sets background-color and color 1`] = `
<div
  className="hsCBhN"
/>
`;

exports[`Badge bg green sets background-color and color 1`] = `
<div
  className="ksxFdl"
/>
`;

exports[`Badge bg lightBlue sets background-color and color 1`] = `
<div
  className="lmOBdv"
/>
`;

exports[`Badge bg lightGreen sets background-color and color 1`] = `
<div
  className="cmSLSv"
/>
`;

exports[`Badge bg lightOrange sets background-color and color 1`] = `
<div
  className="bJjDyx"
/>
`;

exports[`Badge bg lightRed sets background-color and color 1`] = `
<div
  className="edPrvc"
/>
`;

exports[`Badge bg orange sets background-color and color 1`] = `
<div
  className="bXMuhB"
/>
`;

exports[`Badge bg red sets background-color and color 1`] = `
<div
  className="WBDih"
/>
`;

exports[`Badge can escape preset: bg lightBlue sets background-color and color text sets color 1`] = `
<div
  className="VjDUj"
  color="text"
/>
`;

exports[`Badge non-preset: bg text sets background-color and color white sets color 1`] = `
<div
  className="dvFkcF"
  color="white"
/>
`;

exports[`Badge renders 1`] = `
<div
  className="cSnDBB"
/>
`;
